--- a/package.json
+++ b/package.json
@@ -23,13 +23,16 @@
     "dayjs": "^1.11.13",
     "expo": "~53.0.9",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.511.0",
     "react": "19.0.0",
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
+    "react-native-paper": "^5.14.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
+    "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
