--- a/package.json
+++ b/package.json
@@ -34,7 +34,11 @@
     "react-native-svg": "15.11.2",
     "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "undefined": "@expo/metro-runtime+",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
